# maui-installer

./: CMakeLists.txt  README.md
data/: CMakeLists.txt  maui-installer.desktop
modules/: CMakeInstall.txt  CMakeLists.txt
modules/extlinux/: CMakeLists.txt  main.py  module.desc
modules/extlinuxcfg/: CMakeLists.txt  extlinuxcfg.conf  main.py  module.desc
modules/postinstall/: CMakeLists.txt  main.py
modules/postunpackfs/: CMakeLists.txt  main.py  module.desc
modules/preunpackfs/: CMakeInstall.txt  main.py  module.desc  preunpackfs.conf
settings/: CMakeLists.txt  displaymanager.conf  extlinuxcfg.conf  prepare.conf  settings.conf  settings.conf.in  unpackfs.conf
src/: CMakeLists.txt  engine.cpp  engine.h  installer.cpp  installer.h  installer.qrc  languagesmodel.cpp  languagesmodel.h  main.cpp  volumedelegate.cpp  volumedelegate.h  volumeitem.cpp  volumeitem.h  volumemodel.cpp  volumemodel.h
src/images/: .directory
src/pages/: installpage.cpp  installpage.h  installpage.ui  partitionpage.cpp  partitionpage.h  partitionpage.ui  thankspage.cpp  thankspage.h  thankspage.ui  userpage.cpp  userpage.h  userpage.ui  welcomepage.cpp  welcomepage.h  welcomepage.ui
src/qml/: Header.qml  InstallationPage.qml  ListDelegate.qml  Page.qml  PartitionPage.qml  UserPage.qml  WelcomePage.qml  Wizard.qml
